<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.santaistiger.gomourcustomerapp.ui.viewmodel.OrderDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="0dp"
        style="@style/gs_root_container" >

        <!-- 스크롤 - 지도 / 정보 확인칸 / 연락 버튼 -->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/container_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <!-- 지도 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    tools:foreground="#55555555"
                    style="@style/gs_element_card_view" >

                    <FrameLayout
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />
                </androidx.cardview.widget.CardView>

                <!-- 배달 시간 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_delivery_time"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent"
                        android:textSize="17dp"
                        tools:text="2021-03-29 (금) 13:24 도착 예정"
                        bind_detail_delivery_time="@{viewModel.order}"
                        style="@style/gs_text_regular_14"/>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="1dp"
                        android:src="@drawable/ic_refresh_btn"
                        android:scaleType="fitEnd"
                        android:background="@android:color/transparent"
                        android:onClick="@{() -> viewModel.refresh()}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- 출발지 및 목적지 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/gs_order_element_container">

                    <!-- 제목 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/title_address"
                        style="@style/gs_title" />

                    <!-- 가게 -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_store"
                        style="@style/gs_recycler_view"
                        bind_detail_store_list="@{viewModel.order}" />

                    <!-- 목적지 -->
                    <com.santaistiger.gomourcustomerapp.ui.customview.DetailDestinationView
                        android:id="@+id/cv_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind_detail_destination="@{viewModel.order}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- 배송 메시지 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/gs_order_element_container">

                    <!-- 제목 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/title_message"
                        style="@style/gs_title" />

                    <!-- 메시지 -->
                    <com.santaistiger.gomourcustomerapp.ui.customview.DetailMessageView
                        android:id="@+id/cv_message"
                        bind_detail_message="@{viewModel.order}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- 비용 및 계좌번호 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/gs_order_element_container">

                    <!-- 제목 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/title_price_and_account"
                        style="@style/gs_title" />

                    <!-- 가격 -->
                    <com.santaistiger.gomourcustomerapp.ui.customview.DetailPriceView
                        android:id="@+id/cv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind_detail_price="@{viewModel.order}"
                        bind_detail_account_info="@{viewModel.accountInfo}" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>
        </ScrollView>


        <!-- 배달기사에게 전화/문자하기 버튼 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_call_customer"
                android:layout_marginBottom="5dp"
                android:text="@string/call_delivery_man"
                android:onClick="@{() -> viewModel.onCallBtnClick()}"
                style="@style/gs_bottom_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_text_customer"
                android:text="@string/sms_delivery_man"
                android:onClick="@{() -> viewModel.onTextBtnClick()}"
                style="@style/gs_bottom_btn" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
